Implemention of EventScanner