@@ -7,6 +7,7 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Enumeration;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -15,11 +16,15 @@ import static org.hamcrest.Matchers.containsInAnyOrder;
 class FileResourceLookupTest {
 
     @Test
-    void getClasses() throws IOException, URISyntaxException {
-        String[] expected = new String[] {"FileResourceLookup", "ReflectionUtility", "ResourceLookup", "JarResourceLookup", "ResourceLookupFactory"};
+    void shouldGetClassesInCurrentPackage() throws IOException, URISyntaxException {
+        final String[] expected = new String[] {"FileResourceLookup", "ReflectionUtility", "ResourceLookup", "JarResourceLookup", "ResourceLookupFactory"};
         URL url = getPackageURL(getClass().getPackageName());
         FileResourceLookup fileResourceLookup = new FileResourceLookup(url, getClass().getPackageName());
-        List<String> classes = fileResourceLookup.getClasses().stream().map(Class::getSimpleName).toList();
+
+        List<String> classes = fileResourceLookup.getClasses().stream()
+                .map(Class::getSimpleName)
+                .collect(Collectors.toList());
+
         assertThat(classes, is(containsInAnyOrder(expected)));
     }
 
