@@ -6,23 +6,21 @@ import java.io.IOException;
 import java.net.URL;
 import java.util.Enumeration;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.contains;
-import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.hasItem;
-import static org.hamcrest.Matchers.is;
-import static org.junit.jupiter.api.Assertions.*;
 
 class JarResourceLookupTest {
 
     @Test
-    void getClasses() throws Exception {
+    void shouldLoadClassesInCommonJar() throws Exception {
         URL url = getPackageURL("uk.co.codelity.event.sourcing.common");
-        System.out.println(url);
         JarResourceLookup jarResourceLookup = new JarResourceLookup(url);
-        List<String> classNames = jarResourceLookup.getClasses().stream().map(Class::getSimpleName).toList();
-        System.out.println(classNames);
+        List<String> classNames = jarResourceLookup.getClasses().stream()
+                .map(Class::getSimpleName)
+                .collect(Collectors.toList());
+
         assertThat(classNames, hasItem("EventInfo"));
     }
 
